package org.elasticsoftware.elasticactors.cluster.protobuf;

option optimize_for = SPEED;

// WARNING:
//    you must not change the tag numbers of any existing fields.
//    you must not add or delete any required fields.
//    you may delete optional or repeated fields.
//    you may add new optional or repeated fields but you must use fresh tag numbers (i.e. tag numbers that were never
//        used in this protocol buffer, not even by deleted fields).

message ClusterMessage {
    optional ShardReleased shardReleased = 1;
}

message ShardReleased {
    optional int32 shardId = 1;
    optional string actorSystem = 2;
}